[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/TelaInicial/rocket.png" type="Texture" id=1]
[ext_resource path="res://Assets/TelaInicial/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/TelaInicial/logoOutOfBounds.png" type="Texture" id=3]
[ext_resource path="res://Assets/TelaInicial/logoRainbowDev.png" type="Texture" id=4]
[ext_resource path="res://Assets/TelaInicial/planet.png" type="Texture" id=5]
[ext_resource path="res://Scenes/HomeScreen/HomeScreen.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/sair-button.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/iniciar-button.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/iniciar-button-hover.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/sair-button-hover.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/saiba-mais-button-hover.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/saiba-mais-button.png" type="Texture" id=12]

[node name="Tela Inicial 1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 91 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 71, 21 )
scale = Vector2( 0.193182, 0.193182 )
texture = ExtResource( 3 )

[node name="Rocket" type="Sprite" parent="Logo"]
position = Vector2( -176.823, 463.726 )
scale = Vector2( 0.598307, 0.472206 )
texture = ExtResource( 1 )

[node name="Planet" type="Sprite" parent="Logo"]
position = Vector2( 450.353, 616 )
scale = Vector2( 1.33874, 1.33874 )
texture = ExtResource( 5 )

[node name="SemTÃ­tulo" type="Sprite" parent="Logo"]
position = Vector2( 936.94, 31.0587 )
scale = Vector2( 2.4203, 2.87608 )
texture = ExtResource( 4 )

[node name="StartBtn" type="TextureButton" parent="."]
margin_left = 123.0
margin_top = 49.0
margin_right = 206.0
margin_bottom = 70.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitBtn" type="TextureButton" parent="."]
margin_left = 123.0
margin_top = 77.0
margin_right = 200.0
margin_bottom = 97.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credito" type="TextureButton" parent="."]
margin_left = 259.0
margin_top = 149.0
margin_right = 311.0
margin_bottom = 172.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 37, 126 )
scale_amount = 2.0

[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Credito" to="." method="_on_Credito_pressed"]
